#+title:	What's New
#+author:	Positron
#+email:	contact@positron.solutions

* v0.4.0 Packaging
This release series will make +mc+ ~moc~ ready for publishing on package archives.

⚠️ The package prefix has been changed to =moc=.  Hopefully this is the final choice.  It's not totally up to me.
** Added ✨
- ~mc-screenshot-type~ customize option added.  Defaults to =svg=.
** Changed 📈
- ~mc-screenshot-path~ option was renamed to ~mc-screenshot-dir~
** Removed 💩

** Fixed 👷

* v0.3.0 A New Hope 🎄
Nearly a complete rewrite.  After figuring out what belongs in dslide, this package has become more clearly defined.

The ~mc-focus~ command remains the focal point.  Many of the tools like setting the size, hiding the cursor, or changing faces all serve to enhance ~mc-focus~.

⚠️ The naming and features have undergone heavy renaming and stuff.  Don't expect anything to be exactly the same from 0.2.0.  That version was unmaintained on Github for a while as my changes were only localy evolving.
** Added ✨
- ~mc-dispatch~ to control all the things
- ~mc-focus-highlight~ and ~mc-focus-un-highlight~  now support multiple highlighted spans
- ~mc-focus~ now has ~mc-focus-dispatch~ to provide a magit like help / info interface to quickly learn the MC controls
- ~mc-focus-default-remaps~ will apply ~mc-face-remap~ presets so you don't have to manually do common remaps.  The remaps are still interactive and can be manually tweaked for edge cases.
** Changed 📈
- ~mc-face-remap~ is the old org mode remapping.  This version is flexible for all situations and supports multiple preset profiles
- The variables controlling ~mc-focus~ have been renamed / revamped.  The new variables are:
  + ~mc-focus-max-width-factor~
  + ~mc-focus-max-height-factor~
  + ~mc-focus-max-area-factor~
  + ~mc-focus-max-scale~
  These controls are both more flexible and intuitive than whatever was there before.  Naming is more consistent.  Please update.  🎅
** Removed 💩